Notification::waitFor is not interruptible in 3.4

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding 2018-10-22
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The Notification::waitFor call is not interruptible in the 3.4 branch and this could potentially cause deadlock at config server stepdown followed immediately by step-up, due to its usage in the sharding Balancer code. While the chance for such a deadlock is extremely rare, making Notification::waitFor interruptible should be very safe to include in 3.4.

      We can just pick-up the changes to notification.h from this change.

            Assignee:
            Jack Mulrow
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: