SERVER-37367 Make Notification::waitFor interruptible